<resources>
    <string name="app_name">Profile</string>
    <string name="avatar_title">Select Avatar</string>
    <string name="profile_title">User profile</string>
    <string name="lblName">Name (*)</string>
    <string name="hintName">(name)</string>
    <string name="lblEmail">email (*)</string>
    <string name="hintEmail">(email)</string>
    <string name="lblPhone">Phone number (*)</string>
    <string name="hintPhone">(phone)</string>
    <string name="lblAddress">Address (*)</string>
    <string name="hintAddress">(address)</string>
    <string name="lblWeb">Web (*)</string>
    <string name="hintWeb">(web)</string>
    <string name="lblRequired">(*) Required</string>
    <string name="lblPikachu">Pikachu</string>
    <string name="lblCubone">Cubone</string>
    <string name="lblGyarados">Gyarados</string>
    <string name="lblBulbasaur">Bulbasaur</string>
    <string name="lblFeebas">Feebas</string>
    <string name="lblJigglypuff">Jygglypuff</string>
    <string name="lblChikorita">Chikorita</string>
    <string name="lblGiratina">Giratina</string>
    <string name="lblPachirisu">Pachirisu</string>
    <string name="appNotFound">No application can perform this action</string>
    <string name="profile_save">Save Profile</string>
    <string name="avatar_select">Select Avatar</string>
    <string name="profile_invalid_web">Please enter a valid URL</string>
    <string name="profile_invalid_phonenumber">Please enter a valid phone number</string>
    <string name="profile_invalid_address">Please enter a valid address</string>
    <string name="profile_invalid_email">Please enter a valid email</string>
    <string name="saved">User saved successfully</string>
    <string name="profile_invalid_name">Please enter a valid name</string>
</resources>
